--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Android Expert One</string>
+    <string name="app_name">Android Expert Two</string>
     <string name="image_description">Image</string>
     <string name="text_subtitle">Sample of subtitle text</string>
 
